--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,10 +2,10 @@
   <div class="container nav-container">
     <a href="" class="logo">
       <svg class="logo-icon" width="24" height="24" aria-label="logotype">
-        <use href="./logos/symbol-defs.svg#icon-logo"></use>
+        <use href="./images/sprite.svg#icon-logo"></use>
       </svg>
       <svg class="logo-icon" width="77" height="14" aria-label="logotype">
-        <use href="./logos/symbol-defs.svg#bookshelf"></use>
+        <use href="./images/sprite.svg#bookshelf"></use>
       </svg>
     </a>
     <nav class="main-nav">
@@ -16,7 +16,7 @@
         <li class="nav-item">
           <a class="nav-link shop-link" href="./shoppinglist.html" id="shopping-list-link">Shopping List
             <svg class="logo-icon" width="20" height="20" aria-label="logotype">
-              <use href="./logos/symbol-defs.svg#icon-uil-cart"></use>
+              <use href="./images/sprite.svg#icon-uil-cart"></use>
             </svg>
           </a>
         </li>
@@ -32,14 +32,14 @@
     <!--  button menu -->
     <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
       <svg class="burger-icon" width="32" height="32" aria-label="mobile menu button">
-        <use href="./logos/symbol-defs.svg#icon-align-left"></use>
+        <use href="./images/sprite.svg#icon-align-left"></use>
       </svg>
     </button>
     <div class="signup-container">
       <a href="./login.html" class="signup-link" id="signup-link">
         <span class="signup-text"> Sign up </span>
         <svg width="20" height="20" aria-label="Sign up Icon">
-          <use href="./logos/symbol-defs.svg#icon-arrow-narrow-right"></use>
+          <use href="./images/sprite.svg#icon-arrow-narrow-right"></use>
         </svg>
       </a>
     </div>
@@ -51,7 +51,7 @@
           " />
         <span class="profile-text">Stephen</span>
         <svg class="burger-icon" width="23" height="26" aria-label="profile down arrow">
-          <use href="./logos/symbol-defs.svg#icon-fi-ss-caret-down"></use>
+          <use href="./images/sprite.svg#icon-fi-ss-caret-down"></use>
         </svg>
       </a>
     </div>
@@ -59,7 +59,7 @@
       <a href="#" class="signup-link" id="signup-link">
         <span class="signup-text"> Log out </span>
         <svg width="20" height="20" aria-label="Sign up Icon">
-          <use href="./logos/symbol-defs.svg#icon-arrow-narrow-right"></use>
+          <use href="./images/sprite.svg#icon-arrow-narrow-right"></use>
         </svg>
       </a>
     </div>
