--- a/src/style/layout/main.css
+++ b/src/style/layout/main.css
@@ -1,46 +1,84 @@
 .main-header {
-  font-size: 48px;
+  color: var(--color-black);
+  font-size: 32px;
   font-weight: 700;
-  line-height: 1.08;
+  line-height: 1.18;
   letter-spacing: -0.04em;
   margin-bottom: 40px;
 }
 
+@media only screen and (min-width: 768px) {
+  .main-header {
+    font-size: 48px;
+    line-height: 1.08;
+  }
+}
+
 .main-header-accent {
-  color: #4f2ee8;
-  font-size: 48px;
+  color: var(--color-blue);
+  font-size: 32px;
   font-weight: 700;
-  line-height: 1.08;
+  line-height: 1.18;
   letter-spacing: -0.04em;
 }
 
+@media only screen and (min-width: 768px) {
+  .main-header-accent {
+    font-size: 48px;
+    line-height: 1.08;
+  }
+}
+
 .book-card {
-  max-width: 180px;
   display: none;
 }
 
 @media only screen and (max-width: 767px) {
   .book-card:first-child {
+    max-width: 335px;
     display: block;
   }
 }
 
 @media only screen and (min-width: 768px) {
   .book-card:nth-child(-n + 3) {
+    max-width: 218px;
     display: block;
   }
 }
 
 @media only screen and (min-width: 1440px) {
   .book-card {
+    max-width: 180px;
     display: block;
   }
 }
+
 .book-card-img {
   border-radius: 8px;
   margin-bottom: 14px;
-  /* border: #b4afaf 1px solid; */
+
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
+/* height: auto; */
+/* object-fit: cover; */
+/* border: #b4afaf 1px solid; */
+
+@media only screen and (min-width: 768px) {
+  .book-card-img {
+    /* width: 335px;
+    height: 485px; */
+    display: block;
+    max-width: 100%;
+    height: auto;
+    /* height: auto; */
+    /* object-fit: cover; */
+    /* border: #b4afaf 1px solid; */
+  }
+}
+
 .book-card-title {
   margin-left: auto;
   overflow: hidden;
@@ -53,15 +91,15 @@
   text-transform: uppercase;
   margin-bottom: 4px;
 }
+
 .book-card-text {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  color: #b4afaf;
+  color: var(--color-gray);
   font-size: 12px;
   font-style: italic;
-  font-weight: 400;
-  line-height: 1.16; /* 116.667% */
+  line-height: 1.16;
   letter-spacing: -0.04em;
 }
 
@@ -76,13 +114,12 @@
   background-color: var(--color-light-gray);
   border: 2px solid var(--color-blue);
   border-radius: 40px;
-  transition:
-    color 500ms ease-in-out,
-    background-color 500ms ease-in-out;
+  transition: color 500ms ease-in-out, background-color 500ms ease-in-out;
 }
+
 @media only screen and (min-width: 768px) {
   .book-card-btn {
-    margin-bottom: 82px;
+    margin-bottom: 40px;
   }
 }
 
@@ -94,14 +131,36 @@
 .top-category-list {
   display: flex;
   gap: 24px;
-  margin-bottom: 32px;
+  margin-bottom: 8px;
+  /* max-height: 571px; */
 }
+
+@media only screen and (min-width: 768px) {
+  .top-category-list {
+    margin-bottom: 20px;
+    max-height: 408px;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .top-category-list {
+    margin-bottom: 32px;
+    max-height: 348px;
+  }
+}
+
 .top-category-title {
   color: #b4afaf;
   font-size: 14px;
   font-weight: 400;
-  line-height: 1.71;
+  line-height: 1.28;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 18px;
+}
+
+@media only screen and (min-width: 768px) {
+  .top-category-title {
+    line-height: 1.71;
+  }
 }
