--- a/src/style/layout/all-categories.css
+++ b/src/style/layout/all-categories.css
@@ -3,7 +3,9 @@
   height: 228px;
   overflow-y: auto;
 }
-
+/* .book-card.display-block {
+  display: block;
+} */
 @media only screen and (min-width: 768px) {
   .vertical-menu {
     width: 337px;
@@ -23,6 +25,12 @@
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
+a.active {
+  color: var(--color-blue);
+  font-size: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
 .vertical-menu a:hover {
   color: var(--color-blue);
   font-size: 18px;
@@ -31,14 +39,7 @@
   letter-spacing: -0.02em;
   text-transform: uppercase;
 }
-a.active {
-  color: var(--color-blue);
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.3;
-  letter-spacing: -0.02em;
-  text-transform: uppercase;
-}
+
 .list_name {
   color: var(--color-black-transparent);
   font-size: 18px;
