--- a/src/style/layout/login.css
+++ b/src/style/layout/login.css
@@ -10,15 +10,6 @@
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-#login-field-name {
-  max-height: 200px;
-  overflow: hidden;
-  transition: all 800ms ease-in-out;
-}
-#login-field-name.hidden {
-  max-height: 0;
-  opacity: 0;
-margin: 0;}
 
 .login-open {
   position: absolute;
@@ -91,13 +82,18 @@ margin: 0;}
 
 .login-form {
 }
+.login-field-container {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 40px;
+}
 .login-field {
   position: relative;
-  margin-bottom: 24px;
 }
 @media screen and (min-width: 768px) {
   .login-field {
-    margin-bottom: 28px;
+    gap: 28px;
   }
 }
 
@@ -133,6 +129,23 @@ margin: 0;}
 .login-field-input::placeholder {
   color: var(--color-black);
 }
+
+#login-field-name {
+  transition: all 800ms ease-in-out;
+}
+/* #login-field-name.hidden {
+  opacity: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+} */
 
 .modal-error-message {
   position: absolute;
@@ -194,8 +207,7 @@ margin: 0;}
 }
 .login-submit-btn:hover,
 .login-submit-btn:focus {
-  color: var(--color-black);
-  background-color: var(--color-white);
+  background-color: var(--color-blue);
 }
 
 @media screen and (min-width: 768px) {
