--- a/src/style/layout/login.css
+++ b/src/style/layout/login.css
@@ -252,3 +252,10 @@
   color: var(--color-blue);
   text-decoration: underline;
 }
+.login-logout {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+
+}
