--- a/src/style/layout/header.css
+++ b/src/style/layout/header.css
@@ -112,7 +112,7 @@ input:checked + .slider:before {
   border: 2px solid #111;
   background: #fff;
 }
-.container.nav-container {
+.nav-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -123,32 +123,31 @@ input:checked + .slider:before {
   align-items: center;
   gap: 8px;
 }
-@media (max-width: 320px) {
-  .logo {
-    margin-right: 60px;
-  }
-  .header {
-    min-width: 322px;
-  }
-}
-@media (min-width: 335px) {
-  .logo {
-    margin-right: 110px;
-  }
-}
+
 .nav-list {
   display: none;
 }
 
-@media (min-width: 425px) {
-  .logo {
-    margin-right: 162px;
-  }
-}
 /* nav-container */
 .nav-container {
-  min-width: 320px;
-  margin: 0 auto;
+  min-width: 280px;
+  padding: 13px 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.logo-nav {
+  display: flex;
+  align-items: center;
+}
+.switcher-button {
+  display: flex;
+  align-items: center;
+}
+@media only screen and (min-width: 375px) {
+  .nav-container {
+    max-width: 345px;
+  }
 }
 /*----------------------   mobile menu   -----------------------*/
 
@@ -355,15 +354,9 @@ input:checked + .slider:before {
   }
 }
 
-.switcher {
-  margin-right: 14px;
-}
-/* Only mobile styles */
-
-@media only screen and (max-width: 767.98px) {
+@media screen and (min-width: 425px) {
   .nav-container {
-    max-width: 335px;
-    padding: 0 20px;
+    max-width: 385px;
   }
 }
 /* ----------------------Tablet styles------------------------------ */
@@ -378,11 +371,6 @@ input:checked + .slider:before {
     color: var(--color-black);
   }
 
-  .logo {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin-right: 40px;
-  }
   /*------------- Hiden features -------------------*/
   .menu-toggle.js-open-menu {
     display: none;
@@ -460,10 +448,7 @@ input:checked + .slider:before {
     line-height: 18px; /* 128.571% */
     letter-spacing: -0.56px;
   }
-  .header {
-    margin-bottom: 40px;
-    padding: 0;
-  }
+
   .container.nav-container {
     display: flex;
     justify-content: space-between;
@@ -477,10 +462,6 @@ input:checked + .slider:before {
     display: flex;
     align-items: center;
     gap: 16px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    margin-right: 60px;
   }
 
   /* <a> in section main-nav */
@@ -518,6 +499,7 @@ input:checked + .slider:before {
     color: var(--color-black);
     background-color: var(--color-gold);
     font-weight: 700;
+    text-decoration: none;
   }
   .switch {
     margin-right: 20px;
@@ -528,18 +510,17 @@ input:checked + .slider:before {
   }
 }
 /* Tablet styles */
-@media screen and (min-width: 768px) and (max-width: 1439.98px) {
+@media screen and (min-width: 768px) {
   .nav-container {
-    max-width: 768px;
-
-    padding: 0 32px;
+    max-width: 704px;
+    padding: 13px 32px;
+  }
+  .logo-nav {
+    gap: 40px;
   }
 }
 /* =========================1024px ==============================*/
 @media screen and (min-width: 1024px) {
-  .main-nav {
-    margin-right: 275px;
-  }
   .shop-link {
     width: 118px;
   }
@@ -549,7 +530,24 @@ input:checked + .slider:before {
   .header {
     /* margin-bottom: 64px; */
   }
-
+  .logo {
+    display: flex;
+    align-items: center;
+  }
+  .main-nav {
+    margin: 0;
+    display: flex;
+    align-items: center;
+  }
+  .switcher {
+    display: flex;
+    align-items: center;
+  }
+  .signup-container {
+    display: flex;
+    align-items: center;
+    margin: 0;
+  }
   .logo-icon {
     max-width: 100%;
     height: auto;
@@ -568,7 +566,6 @@ input:checked + .slider:before {
 @media screen and (min-width: 1440px) {
   .nav-container {
     max-width: 1440px;
-    padding: 0 24px;
-    display: inline-flex;
+    padding: 13px 24px;
   }
 }
