--- a/src/style/layout/all-categories.css
+++ b/src/style/layout/all-categories.css
@@ -35,19 +35,26 @@ a.active {
   color: var(--color-blue);
   font-size: 18px;
   font-weight: 700;
-  line-height: 1.3;
+  line-height: 1.1;
   letter-spacing: -0.02em;
   text-transform: uppercase;
 }
 
 .list_name {
   color: var(--color-black-transparent);
-  font-size: 18px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 1.3;
   letter-spacing: -0.02em;
 }
+@media only screen and (min-width: 768px) {
+  .list_name {
+    font-size: 18px;
+    line-height: 1.3;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 8px;
 }
@@ -69,4 +76,19 @@ a.active {
   flex-wrap: wrap;
   column-gap: 25px;
   row-gap: 40px;
+}
+@media only screen and (min-width: 375px) {
+  .book-card.show-all {
+    display: block;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .book-card.show-all {
+    display: block;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  .book-card.show-all {
+    display: block;
+  }
 }
