--- a/src/partials/allcategories.html
+++ b/src/partials/allcategories.html
@@ -1,5 +1,5 @@
 <ul class="vertical-menu">
-    <li class='list_name'>
-        <a href="/" name='allcategories'>All categories</a>
+    <li class='list_name' name='allcategories'>
+        All categories
     </li>
 </ul>
