--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,5 +1,5 @@
-<div class="modal is-hidden" data-modal>
-  <div class="modal-content">
+<div class="modal-shown is-hidden">
+  <div class="modal-content active">
     <button class="close" type="button">
       <svg class="close-icon" width="28" height="28">
         <use href="./images/sprite.svg#icon-x-close"></use>
@@ -7,13 +7,10 @@
     </button>
   </div>
   <div class="modal-body">
-    <div class="modal-book-card">
-
-    </div>
+    <div class="modal-book-card"></div>
     <div>
         <button type="submit" class="add-button">Add to shopping list</button>
         <button type="submit" class="remove-button">Remove from the shopping list</button>
     </div>
   </div>
 </div>
-<script src="./js/modal.js" type="module"></script> 
