--- a/src/style/layout/main.css
+++ b/src/style/layout/main.css
@@ -183,3 +183,33 @@
     line-height: 1.71;
   }
 }
+
+/* ===================== Book card backdrop ========================= */
+
+.book-card-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.book-text-backdrop {
+  background-color: var(--color-blue);
+  color: var(--color-white);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.book-card:hover .book-text-backdrop {
+  transform: translateY(70%);
+}
+
+.book-card:focus .book-text-backdrop {
+  transform: translateY(70%);
+}
