--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,5 +2,5 @@
   <h1 class="main-header">
     Best Sellers <span class="main-header-accent">Books</span>
   </h1>
-  <ul class="bestsellers-list"></ul>
+  <div class="bestsellers-list"></div>
 </section>
